--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Binaries for programs and plugins
+# Binaries for programs and plugin
 *.exe
 *.exe~
 *.dll
@@ -13,3 +13,4 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+/.idea/
